src/stylus/main.styl
@import 'vendor/normalize'
@import 'vendor/grider'
  
@font-face
  font-family: 'raleway'
  src: url('../fonts/raleway-light-webfont.eot')
  src: url('../fonts/raleway-light-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/raleway-light-webfont.woff2') format('woff2'),
       url('../fonts/raleway-light-webfont.woff') format('woff'),
       url('../fonts/raleway-light-webfont.ttf') format('truetype'),
       url('../fonts/raleway-light-webfont.svg#raleway') format('svg')
  font-weight: 100
  font-style: normal
  
@font-face
  font-family: 'raleway'
  src: url('../fonts/raleway-regular-webfont.eot')
  src: url('../fonts/raleway-regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/raleway-regular-webfont.woff2') format('woff2'),
       url('../fonts/raleway-regular-webfont.woff') format('woff'),
       url('../fonts/raleway-regular-webfont.ttf') format('truetype'),
       url('../fonts/raleway-regular-webfont.svg#raleway') format('svg')
  font-weight: normal
  font-style: normal
  
@font-face
  font-family: 'raleway'
  src: url('../fonts/raleway-black-webfont.eot')
  src: url('../fonts/raleway-black-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/raleway-black-webfont.woff2') format('woff2'),
       url('../fonts/raleway-black-webfont.woff') format('woff'),
       url('../fonts/raleway-black-webfont.ttf') format('truetype'),
       url('../fonts/raleway-black-webfont.svg#raleway') format('svg')
  font-weight: 900
  font-style: normal
  
$color-primary = #3AF2A2
$font-default  = 'raleway', Arial, sans-serif

html, body
  font-family: sans-serif
  height: 100%
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

body
  font-size: 62.5%
  background: #fff
  font-family: $font-default
  
code, pre
  background: #f5f5f5
  padding: .3em .4em
  border: 1px solid darken(@background, 8%)
  border-radius: 4px
  font-family: 'Lucida Console', Monaco, monospace
  font-weight: normal

code
  font-size: .9em
  
pre
  display: block
  max-width: 98%
  font-size: 1.4em
  padding: .1em
  color: #444
  margin: 1.5em 0
  
  @media phone
    overflow: auto
  
.fork-button
  display: block
  text-align: center
  padding: .5em 0
  font-size: 1.2em
  text-transform: uppercase
  font-weight: bold
  color: #777
  width: 30em
  background: #eee
  position: fixed
  transform: rotate(45deg)
  top: 5em
  right: -9em
  text-decoration: none
  transition: background .5s ease
  z-index: 100
  
  &:hover
    background: #444
    color: #fff
    
  @media phone
    position: absolute
    
.heart
  font-size: 1.2em
  font-weight: normal
  animation: beat 1.5s ease-in-out infinite
  color: #D24D57
    
@keyframes beat
  0%
    transform: scale(1)
  50%
    transform: scale(1.1)
  100%
    transform: scale(1)

.header
  display: flex
  background: $color-primary
  height: 100%
  
.header-content
  margin: auto
  
.header-logo
  padding: 0
  margin: 0
  
.header-logo--text
  display: block
  width: 240px
  height: 2.8em
  margin: 1em auto 0 auto
  background: url('../img/logo-mojito.png') 0 0 no-repeat
  background-size: 100% auto
  text-indent: -9999em

.header-logo--cup
  font-size: 90%
  display: block
  margin: 0 auto
  width: 5em
  height: 9em
  border: .5em solid #333
  border-radius: 0 0 .5em .5em
  position: relative
  
  &:before
    content: ''
    position: absolute
    bottom: -.5em
    left: 50%
    display: block
    width: 0
    height: 13em
    border: .31em solid #333
    transform: rotate(15deg)
    border-radius: .1em
    
  &:after
    content: ''
    position: absolute
    top: 0
    bottom: 0
    right: 0
    left: 0
    background: #fff
    animation: cup-water 10s linear infinite
    
.header-description
  padding: 0
  margin: 0
  color: #fff
  font-size: 1.7em
  margin: .3em 0 0 0
  text-align: center
  font-weight: bold
    
@keyframes cup-water
  from
    top: 0
  to
    top: 80%


.section
  padding: 3em 1em
  max-width: 1000px
  margin: 0 auto
  position: relative
  background: #fff

.section-title
  margin: 1em 0
  padding: 0
  line-height: 1
  text-align: center
  color: #444
  font-weight: 900
  font-size: 4em
  text-transform: uppercase
  
.section-text, .section-list--item
  font-weight: normal
  font-size: 1.8em
  line-height: 1.8em
  color: #777
  
  a
    text-decoration: none
    color: #333
    padding-bottom: .1em
    border-bottom: 1px solid $color-primary
    
    &:hover
      color: #000
  
.section-list
  padding: 0
  margin: 1em 0

.section-list--item
  padding-left: .7em
  margin-left: 1em
  margin-bottom: 1em


.footer
  padding: 2em 0
  margin-top: 5em
  background: #444
  
.footer-credits
  font-size: 1.4em
  color: #ccc
  text-align: center
  font-weight: normal
  
  a
    color: @color
    text-decoration: none
    padding-bottom: .1em
    border-bottom: 1px solid #333
    
    &:hover
      color: #fff
      border-color: $color-primary

